tests/snapshots/run_wpt_conformance__onnx_convTranspose2d_default___relu.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "convTranspose2d default + relu",
    "onnx",
    "PASS",
)
